# aries-multi-channel-demo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md  aries-demo.sln  aries-demo.vcxproj  aries-demo.vcxproj.filters  multi-channel-demo.desktop  run.sh  update.sh
mxq/: ssd.mxq  yolo11s-face.mxq  yolo26s-pose.mxq  yolo26s-seg.mxq  yolo26s.mxq
package/: Makefile  README.md  package.sh
rc/: FeederSetting.yaml  FeederSettingCam.yaml  LayoutSetting.yaml  ModelSetting.yaml  ModelSetting2.yaml
src/demo/: CMakeLists.txt  benchmarker.h  define.h  demo.cc  demo.h  feeder.cc  model.cc  model.h  model_inference.cc  post.h  post_ssd.cc  post_ssd.h  post_yolo_anchor.cc  post_yolo_anchor.h  post_yolo_anchor_face.cc  post_yolo_anchor_face.h  post_yolo_anchorless.cc  post_yolo_anchorless.h  post_yolo_anchorless_face.cc  post_yolo_anchorless_face.h  post_yolo_anchorless_pose.cc  post_yolo_anchorless_pose.h  post_yolo_anchorless_seg.cc  post_yolo_anchorless_seg.h  post_yolo_base.cc  post_yolo_base.h  post_yolo_dflfree.cc  post_yolo_dflfree.h  post_yolo_dflfree_pose.cc  post_yolo_dflfree_pose.h  post_yolo_dflfree_seg.cc  post_yolo_dflfree_seg.h  post_yolo_nmsfree.cc  post_yolo_nmsfree.h  yaml_util.cc
